k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook-stdout
  name: webhook-stdout
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: webhook-stdout
